--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
     username: digitization_dev1
     password: 1234
   jpa:
+    generate-ddl: false
     show-sql: false
     open-in-view: true
     hibernate:
