#7 - create location region api

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     show-sql: false
     open-in-view: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
       dialect: org.hibernate.dialect.MySQL8Dialect
@@ -29,8 +29,8 @@ spring:
 api:
   prefix: /api/v1
 jwt:
-  expiration: 600 #10 minutes = 60 * 10
-  expiration-refresh-token: 900 #15 minutes = 60 * 15
+  expiration: 1800 #30 minutes = 60 * 30
+  expiration-refresh-token: 3600 #60 minutes = 60 * 60
   secretKey: Kxxb9zA91Vz7IQ/pHuID1+xHkekZ9tBqYAorv7ghNSc=
 
 logging:
