--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 9347
   root-folder: storage
+  compression:
+    enabled: true
+    mime-types: application/json,application/pdf,application/zip
 spring:
   datasource:
     url: jdbc:mysql://103.183.112.133:4307/tst_digitization_dev?useSSL=false&serverTimezone=Asia/Ho_Chi_Minh&allowPublicKeyRetrieval=true
@@ -19,7 +22,7 @@ spring:
       format_sql: true
   servlet:
     multipart:
-      max-file-size: 10MB
+      max-file-size: 2MB
       max-request-size: 10MB
   data:
     redis:
