--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,8 +33,8 @@ spring:
 api:
   prefix: /api/v1
 jwt:
-  expiration: 1800 #30 minutes = 60 * 30
-  expiration-refresh-token: 3600 #60 minutes = 60 * 60
+  expiration: 10800 #3 hours = 60 * 60 * 3
+  expiration-refresh-token: 14400 #4 hours = 60 * 60 * 4
   secretKey: Kxxb9zA91Vz7IQ/pHuID1+xHkekZ9tBqYAorv7ghNSc=
 
 logging:
