#29 - config snake case for api

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,13 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.1.0-jre</version>
+        </dependency>
+
+
         <!-- Logging with SLF4J and Logback -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
