#31 - implement file organization

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,8 @@ spring:
     username: digitization_dev1
     password: 1234
   jpa:
-    generate-ddl: false
-    show-sql: false
+    generate-ddl: true
+    show-sql: true
     open-in-view: true
     hibernate:
       ddl-auto: none
@@ -33,8 +33,8 @@ spring:
 api:
   prefix: /api/v1
 jwt:
-  expiration: 10800 #3 hours = 60 * 60 * 3
-  expiration-refresh-token: 14400 #4 hours = 60 * 60 * 4
+  expiration: 84000 #24 hours = 60 * 60 * 24
+  expiration-refresh-token: 90000 #25 hours = 60 * 60 * 25
   secretKey: Kxxb9zA91Vz7IQ/pHuID1+xHkekZ9tBqYAorv7ghNSc=
 
 logging:
